# invoices

./: .gitignore  README.md  render.yaml
lib/: pyproject.toml
lib/invoice_generator/: __init__.py  cli.py  date_calculator.py  fonts.py  invoice_calculator.py  invoice_config.py  invoice_generator.py  invoice_renderer.py  markup_parser.py  markup_renderer.py  markup_template.py  template_config.py
web/: .gitignore  README.md  app.py  config.py  database.py  example_config.json  models.py  requirements.txt  run.sh  schemas.py
web/alembic/: env.py
web/alembic/versions/: 001_initial_migration_create_invoices_tables.py
web/templates/: index.html  invoices.html
