[project]
name = "invoice-generator"
version = "0.1.0"
description = "Generate invoice PDFs with configurable dates and full Unicode support"
readme = "../README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Rostyslav Haidukov"}
]
keywords = ["invoice", "pdf", "generator", "polish", "unicode"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "reportlab>=4.0.7",
    "holidays>=0.34",
]

[project.scripts]
invoice-generate = "invoice_generator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

